fix collapse

--- a/editor/css/trotamundos.css
+++ b/editor/css/trotamundos.css
@@ -103,6 +103,7 @@ a:visited {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     cursor: pointer;
 }
 
